// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConformsForm 1`] = `
Array [
  "pending",
  <input
    onChange={[Function]}
  />,
  <input
    type="submit"
  />,
]
`;

exports[`ConformsForm 2`] = `
Array [
  <p
    className="robot"
  >
    question
  </p>,
  <input
    onChange={[Function]}
  />,
  <input
    type="submit"
  />,
]
`;

exports[`useChatBuilder 1`] = `
Array [
  "pending",
  <input
    onChange={[Function]}
  />,
  <input
    type="submit"
  />,
]
`;

exports[`useChatBuilder 2`] = `
Array [
  <p
    className="robot"
  >
    question
  </p>,
  <input
    onChange={[Function]}
  />,
  <input
    type="submit"
  />,
]
`;
